.provarCaches/00D410000011HE0EAM/objects/rstk__mrpthread__c.object
<CustomObject>
    <description>mrpthread__c</description>
    <fields>
        <fullName>rstk__mrpthread_desc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__mrpthread_endcpu__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>End CPU</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpthread_enddmls__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>End DLMs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpthread_endheap__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>End Heap</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpthread_endqueries__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>End Queries</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpthread_itemsprocessed__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Items Processed Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__mrpthread_mrplaunch__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>MRP Launch</label>
        <referenceTo>rstk__mrplaunch__c</referenceTo>
        <relationshipLabel>MRP Process Threads</relationshipLabel>
        <relationshipName>mrpthreads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MRP Process Thread</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstk__mrpthread_desc__c</columns>
        <columns>rstk__mrpthread_mrplaunch__c</columns>
        <columns>rstk__mrpthread_endcpu__c</columns>
        <columns>rstk__mrpthread_enddmls__c</columns>
        <columns>rstk__mrpthread_endheap__c</columns>
        <columns>rstk__mrpthread_endqueries__c</columns>
        <columns>rstk__mrpthread_itemsprocessed__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MRP Process Threads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>